# llm-infer

./: .env.yaml.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  llm-infer.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  BUGS_JOURNAL.md  CLIENT.md  ENGINES.md  USAGE.md  adapters.md  api.md  bugs-journal.md  client.md  config.md  engines.md  known-issues.md  usage.md
etc/: compat.yaml  compat_template.yaml  inference.yaml  infra.yaml  llm-infer.yaml  models.yaml  native.yaml  ollama.yaml  peft.yaml  pip.conf  vllm-server.yaml  vllm.yaml
examples/client/: client.py  client.yaml  test_retry_client.py  test_retry_server.py
llm_infer/: __init__.py  adapter_meta.py  client.py  compat.py  context.py  logging_setup.py
llm_infer/api/: __init__.py
llm_infer/backends/: __init__.py
llm_infer/cli/: cli.py
llm_infer/cli/config/: __init__.py  (+1 more)
llm_infer/client/: README.md  __init__.py  base.py  bound.py  client.py  discovery.py  embedding.py  embeddings.py  errors.py  exceptions.py  factory.py  fallback.py  fallback_helper.py  log_utils.py  resolver.py  retry.py  router.py  router_helper.py  saia.py  strategies.py  strategy.py  types.py
llm_infer/engines/: __init__.py  ollama.py  peft.py  protocol.py  vllm.py  vllm_common.py  vllm_server.py
llm_infer/models/: __init__.py  config.py  metadata.py  resolver.py
llm_infer/pipelines/: __init__.py  config.py  engine.py  generation.py  scheduler.py
llm_infer/primitives/: __init__.py  protocols.py
llm_infer/response/: __init__.py  events.py  latex.py  processor.py  protocols.py  utf8.py
llm_infer/schemas/: __init__.py  openai.py
llm_infer/serving/: __init__.py  adapters.py
llm_infer/text/: __init__.py  latex.py  think.py
tests/: test_config.py
tests/unit/: adapters_test.py  architecture_test.py  attention_backend_test.py  awq_linear_test.py  client_test.py  compat_test.py  concurrent_http_handler_test.py  config_overrides_test.py  context_test.py  engine_config_test.py  fallback_client_test.py  fp8_pytorch_test.py  generation_helpers_test.py  guards_test.py  handler_adapter_test.py  imports_test.py  kv_cache_test.py  layers_quantized_test.py  layers_rmsnorm_test.py  logging_setup_test.py  model_config_test.py  naive_attention_test.py  ollama_engine_test.py  openai_reasoning_compat_test.py  quant_format_test.py  registry_test.py  response_format_test.py  rope_test.py  sampler_test.py  scheduler_test.py  sequence_kv_cache_test.py  serve_model_overrides_test.py  think_tag_normalizer_test.py  tokenizer_config_test.py  tool_calling_test.py  vllm_common_test.py  vllm_server_engine_test.py  weight_formats_test.py
(+176 files in other folders)
