[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0,<9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-infer"
dynamic = ["version"]
description = "A readable LLM inference server implementing paged attention and continuous batching"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "appinfra[fastapi]",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "safetensors>=0.4.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    # Security: explicitly pin transitive dependencies for CVE fixes
    "aiohttp>=3.13.3,<4.0.0",
    "filelock>=3.20.1,<4.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "werkzeug>=3.1.5,<4.0.0",
]

[project.optional-dependencies]
cuda = [
    "flashinfer-python>=0.2.0,<1.0.0",
]
dev = [
    "coverage>=7.0.0,<8.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "types-PyYAML>=6.0.0",
    "pytest>=7.0.0,<10.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_infer"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, isolated, mocked dependencies)",
    "integration: Integration tests (real dependencies)",
    "e2e: End-to-end tests (full system workflows)",
    "perf: Performance tests (benchmarks, load tests)",
    "security: Security tests (injection, validation, XSS)",
]

[tool.coverage.run]
source = ["llm_infer"]
omit = ["*/test/*", "*/tests/*", "*_test.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[project.scripts]
llm-infer = "llm_infer.cli.cli:main"

[tool.setuptools_scm]
# Version derived from git tags (e.g., v0.1.0 -> 0.1.0)
# Fallback for builds without git (e.g., Docker)
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_infer*"]
exclude = ["tests*", "scripts*", "docs*", "examples*", "etc*"]
